--- a/app/src/main/res/layout/activity_welcome_get_started.xml
+++ b/app/src/main/res/layout/activity_welcome_get_started.xml
@@ -4,21 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="237dp">
+       android:minHeight="237dp">
+
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/background_light">
+        android:background="@drawable/fglogoheadblk">
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="166dp"
-            android:layout_marginTop="48dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/blkwhthorizontallogoheadandletters" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/fglogoheadblk" />
 
 
         <Button
